<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.wit.mobileapp.organizedchaos.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_filter"
        android:name="edu.wit.mobileapp.organizedchaos.FilterFragment"
        android:label="@string/menu_filter"
        tools:layout="@layout/fragment_filter" />

    <fragment
        android:id="@+id/nav_category"
        android:name="edu.wit.mobileapp.organizedchaos.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/activity_add_new_category" />

    <fragment
        android:id="@+id/nav_archive"
        android:name="edu.wit.mobileapp.organizedchaos.ArchiveFragment"
        android:label="@string/menu_archive"
        tools:layout="@layout/fragment_archive" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="edu.wit.mobileapp.organizedchaos.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>